objects/FF_Json_values__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Tipo_Numero_Amigo_Linea_Id__c</fullName>
        <label>Tipo Numero Amigo Linea Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Numero_Amigo_Linea_Texto__c</fullName>
        <label>Tipo Numero Amigo Linea Texto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Numero_Amigo_Mobil_Id__c</fullName>
        <label>Tipo Numero Amigo Mobil Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Numero_Amigo_Mobil_Texto__c</fullName>
        <label>Tipo Numero Amigo Mobil Texto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>F&amp;F Json values</label>
</CustomObject>